# AI_NOTE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _fix_backtick.py  _fix_layout.py  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  start-dev.ps1
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: config.py  cookie_store.py  database.py  errors.py  logger.py  model_usage.py  paths.py  provider_store.py
app/llm/: __init__.py  client.py  mock.py
app/models/: __init__.py  chunk.py  enabled_model.py  note.py  provider.py  task.py  task_log.py  video.py
app/note/: generator.py  timeline.py
app/pipeline/: __init__.py  events.py  orchestrator.py  service.py
app/processor/: __init__.py  audio.py  downloader.py  mock.py  parser.py  retry.py  storage.py  subtitles.py  video_processor.py
app/qa/: __init__.py  engine.py  mock.py
app/retriever/: __init__.py  hybrid.py  mock.py
app/schemas/: __init__.py  chunk.py  note.py  qa.py  response.py  stage.py  task.py  transcript.py  video.py
data/: embedding_config.json  model_usage_config.json  note_format.json  note_format_templates.json
frontend/: .env.mock  Dockerfile  _test.tsx  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
migrations/: env.py
mock_backend/: __init__.py  app.py  store.py
scripts/: run_pipeline.py  save_cookie.py  setup_models.py  test_real_b_module.py  verify_b_module.py
文档/: Prompt工程文档.md  api接口文档.md  前端页面结构设计.md  团队分工与开发计划.md  技术方案.md  数据库设计文档.md  流水线任务编排设计.md  环境搭建与快速启动指南.md  需求文档.md  项目目录结构说明.md
(+102 files in other folders)
