[project]
name = "videonote"
version = "0.1.0"
description = "视频知识沉淀与智能问答系统"
 requires-python = "==3.13.3"
dependencies = [
    "alembic>=1.13.0",
    "chromadb>=0.5.0",
    "fastapi>=0.138.2",
    "faster-whisper>=1.0.0",
    "httpx>=0.26.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "yt-dlp>=2024.0.0",
]

[tool.ruff]
line-length = 100

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
