[project]
name = "videonote"
version = "0.1.0"
description = "视频知识沉淀与智能问答系统"
 requires-python = "==3.13.3"
dependencies = [
    "alembic>=1.13.0",
    "chromadb>=0.5.0",
    "fastapi>=0.138.2",
    "faster-whisper>=1.0.0",
    "httpx>=0.26.0",
    "logger>=1.4",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "yt-dlp>=2024.0.0",
]

[tool.ruff]
line-length = 100

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "numpy>=2.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
gpu = [
    # GPU 加速依赖（可选安装）
    # CUDA 12.x 用户: uv sync --group gpu
    # CUDA 11.x 用户需手动安装: pip install nvidia-cublas-cu11
    "nvidia-cublas-cu12>=12.0.0",
]
